--- a/AntiLegend.html
+++ b/AntiLegend.html
@@ -3,6 +3,26 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 
+<script type="text/javascript">   
+    var password=""
+
+    password=prompt('请输入密码，输错将关闭网页:','');
+
+    function custom_close()
+    {
+        window.opener=null;
+        window.open('','_self');
+        window.close();
+    }
+
+    if (password !='235711')
+    {
+        custom_close();
+        //加这一段是为了避免有些浏览器不支持关闭浏览器的js ,所以请求跳转到一个新页面！
+        window.location.href='https://gagerain.github.io/XDU-CS-Resources/';
+    }
+</script> 
+
 <style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; --title-bar-height:20px; }
 .mac-os-11 { --title-bar-height:28px; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
